--- a/index.html
+++ b/index.html
@@ -18,68 +18,68 @@
 <main class="ml-3 bg-secondary">
     <div class="row">
         <div class="d-md-none col-4 col-md-2" >
-            <img src="jpg/Mercedes.jpg" alt="Mercedes formule" class="bg-primary img-fluid p-1 py-4 my-3">
-            <img src="jpg/Ferrarii.jpg" alt="Ferrari formule" class="bg-primary img-fluid p-1 py-4 my-3">
-            <img src="jpg/Redbull.jpg" alt="Redbull formule" class="bg-primary img-fluid p-1 py-4 my-3">
-            <img src="jpg/RB.jpg" alt="RB formule" class="bg-primary img-fluid p-1 py-4 my-3">
-            <img src="jpg/Mclaren.jpg" alt="Mclaren formule" class="bg-primary img-fluid p-1 py-4 my-3">
-            <img src="jpg/Aston.jpg" alt="Aston formule" class="bg-primary img-fluid p-1 py-4 my-3">
-            <img src="jpg/Williams.jpg" alt="Williams formule" class="bg-primary img-fluid p-1 py-4 my-3">
-            <img src="jpg/Alpine.jpg" alt="Apline formule" class="bg-primary img-fluid p-1 py-4 my-3">
-            <img src="jpg/Stake.jpg" alt="Stake formule" class="bg-primary img-fluid p-1 py-4 my-3">
-            <img src="jpg/Haas.jpg" alt="Haas formule" class="bg-primary img-fluid p-1 py-4 my-3">
+            <img src="./jpg/Mercedes.jpg" alt="Mercedes formule" class="bg-primary img-fluid p-1 py-4 my-3">
+            <img src="./jpg/Ferrarii.jpg" alt="Ferrari formule" class="bg-primary img-fluid p-1 py-4 my-3">
+            <img src="./jpg/redbull.jpg" alt="Redbull formule" class="bg-primary img-fluid p-1 py-4 my-3">
+            <img src="./jpg/RB.jpg" alt="RB formule" class="bg-primary img-fluid p-1 py-4 my-3">
+            <img src="./jpg/Mclaren.jpg" alt="Mclaren formule" class="bg-primary img-fluid p-1 py-4 my-3">
+            <img src="./pg/Aston.jpg" alt="Aston formule" class="bg-primary img-fluid p-1 py-4 my-3">
+            <img src="./jpg/Williams.jpg" alt="Williams formule" class="bg-primary img-fluid p-1 py-4 my-3">
+            <img src="./jpg/Alpine.jpg" alt="Apline formule" class="bg-primary img-fluid p-1 py-4 my-3">
+            <img src="./jpg/Stake.jpg" alt="Stake formule" class="bg-primary img-fluid p-1 py-4 my-3">
+            <img src="./jpg/Haas.jpg" alt="Haas formule" class="bg-primary img-fluid p-1 py-4 my-3">
         </div>
         <div class="d-none d-md-block col-4 col-md-2" >
             <div class="row">
                 <div class="container ml-3 mt-3 border bg-primary bg-gradient text-light p-3">
                     <h1 class="h2 pb-1">Mercedes</h1>
                     <span class="fs-3">George Russell a Lewis Hamilton</span>
-                    <img src="jpg/Mercedes.jpg" alt="Mercedes formule" class="img-fluid pt-4 p-2">
+                    <img src="./jpg/Mercedes.jpg" alt="Mercedes formule" class="img-fluid pt-4 p-2">
                 </div>
                 <div class="container ml-3 mt-3 border bg-primary bg-gradient text-light p-3">
                     <h1 class="h2 pb-1">Ferrari</h1>
                     <span class="fs-3">Charles Leclerc a Carlos Sainz</span>
-                    <img src="jpg/Ferrarii.jpg" alt="Ferrari formule" class="img-fluid pt-4 pt-2">
+                    <img src="./jpg/Ferrarii.jpg" alt="Ferrari formule" class="img-fluid pt-4 pt-2">
                 </div>
                 <div class="container ml-3 mt-3 border bg-primary bg-gradient text-light p-3">
                     <h1 class="h2 pb-1">Redbull Racing</h1>
                     <span class="fs-3">Max Verstappen a Sergio Perez</span>
-                    <img src="jpg/redbull.jpg" alt="Redbull formule" class="img-fluid pt-4  pt-2">
+                    <img src="./jpg/redbull.jpg" alt="Redbull formule" class="img-fluid pt-4  pt-2">
                 </div>
                 <div class="container ml-3 mt-3 border bg-primary bg-gradient text-light p-3">
                     <h1 class="h2 pb-1">RB</h1>
                     <span class="fs-3">Yuki Tsunoda a Daniel Riccardo</span>
-                    <img src="jpg/RB.jpg" alt="RB formule" class="img-fluid pt-4 pt-2">
+                    <img src="./jpg/RB.jpg" alt="RB formule" class="img-fluid pt-4 pt-2">
                 </div>
                 <div class="container ml-3 mt-3 border bg-primary bg-gradient text-light p-3">
                     <h1 class="h2 pb-1">McLaren</h1>
                     <span class="fs-3">Lando Norris a Oscar Piastri</span>
-                    <img src="jpg/Mclaren.jpg" alt="Mclaren formule" class="img-fluid pt-4 pt-2">
+                    <img src="./jpg/Mclaren.jpg" alt="Mclaren formule" class="img-fluid pt-4 pt-2">
                 </div>
                 <div class="container ml-3 mt-3 border bg-primary bg-gradient text-light p-3">
                     <h1 class="h2 pb-1">Aston Martin</h1>
                     <span class="fs-3">Lance Stroll a Fernando Alonso</span>
-                    <img src="jpg/Aston.jpg" alt="Aston formule" class="img-fluid pt-4 pt-2">
+                    <img src="./jpg/Aston.jpg" alt="Aston formule" class="img-fluid pt-4 pt-2">
                 </div>
                 <div class="container ml-3 mt-3 border bg-primary bg-gradient text-light p-3">
                     <h1 class="h2 pb-1">Williams</h1>
                     <span class="fs-3">Alexander Albon a Logan Sergeant</span>
-                    <img src="jpg/Williams.jpg" alt="williams formule" class="img-fluid pt-4 pt-2">
+                    <img src="./jpg/Williams.jpg" alt="williams formule" class="img-fluid pt-4 pt-2">
                 </div>
                 <div class="container ml-3 mt-3 border bg-primary bg-gradient text-light p-3">
                     <h1 class="h2 pb-1">Alpine</h1>
                     <span class="fs-3">Pierre Gasly a Esteban Ocon</span>
-                    <img src="jpg/alpine.jpg" alt="Alpine formule" class="img-fluid pt-4 pt-2">
+                    <img src="./jpg/alpine.jpg" alt="Alpine formule" class="img-fluid pt-4 pt-2">
                 </div>
                 <div class="container ml-3 mt-3 border bg-primary bg-gradient text-light p-3">
                     <h1 class="h2 pb-1">Kick Sauber</h1>
                     <span class="fs-3">Zhou Guanyu a Valtteri Bottas</span>
-                    <img src="jpg/Stake.jpg" alt="Stake formule" class="img-fluid pt-4 pt-2">
+                    <img src="./jpg/Stake.jpg" alt="Stake formule" class="img-fluid pt-4 pt-2">
                 </div>
                 <div class="container ml-3 mt-3 border bg-primary bg-gradient text-light p-3">
                     <h1 class="h2 pb-1">Haas</h1>
                     <span class="fs-3">Nico Hulkenberg a Kevin Magnussen</span>
-                    <img src="jpg/Haas.jpg" alt="Haas formule" class="img-fluid pt-4 pt-2">
+                    <img src="./jpg/Haas.jpg" alt="Haas formule" class="img-fluid pt-4 pt-2">
                 </div>
             </div>
         </div>
@@ -189,10 +189,8 @@
             </div>
             <div class="cotainer border border-primary p-4 m-4">
                 <h1 class="h2 bg-light">Seznam závodů</h1>
-                <span class="d-md-none">
-                    Jaké závody se konají v roce 2024? <br>
+                    <p class="d-md-none" >Jaké závody se konají v roce 2024?</p>
                     <a href="https://www.formula1.com/en/racing/2024.html"> > Kalendář všech závodů </a>
-                </span>
             </div>
         </div>
     </div>
